--- a/web_shell/VM-Framework/views/home.erb
+++ b/web_shell/VM-Framework/views/home.erb
@@ -1,4 +1,4 @@
-<title> Local Cloud admin</title>
+<title> Ruby agents sdk admin</title>
 <table>
   <thead>
     <tr>
@@ -35,7 +35,7 @@
     </tr>
     <tr>
       <form action="/restart_server" method="get">
-        <td><button>Restart cloud</button></td>
+        <td><button>Apply and reboot ruby agent sdk server</button></td>
       </form>
     </tr>
 
