--- a/web_shell/VM-Framework/views/home.erb
+++ b/web_shell/VM-Framework/views/home.erb
@@ -1,53 +1,1 @@
-<!DOCTYPE html>
-
-<title> Ruby agents sdk admin</title>
-<!-- Bootstrap -->
-<link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
-
-<body>
-    <script src="http://code.jquery.com/jquery.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Running ?</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @agents.each do |agent_name, agent| %>
-      <tr>
-        <td><%= agent.name %></td>
-        <td><%= agent.running %></td>
-        <td>
-          <% if agent.running %>
-          <form action='<%= "/agents/#{agent_name}/stop" %>' method="post">
-            <button>Stop</button>
-          </form>
-          <% else %>
-          <form action='<%= "/agents/#{agent_name}/start" %>' method="post">
-            <button>Start</button>
-          </form>
-          <% end %>
-        </td>
-      </tr>
-      <% end %>
-      <tr>
-        <form action="/create_agents" method="post">
-          <td><input type="text" name="agent[name]" /></td>
-          <td></td>
-          <td><button>Create</button></td>
-        </form>
-      </tr>
-      <tr>
-        <form action="/restart_server" method="get">
-          <td><button>Apply and reboot ruby agent sdk server</button></td>
-        </form>
-      </tr>
-    </tbody>
-
-  </table>
-</body>
+welcome home !
