layout.rb: add som icon in navbar.

--- a/web_shell/VM-Framework/views/layout.erb
+++ b/web_shell/VM-Framework/views/layout.erb
@@ -23,10 +23,10 @@
               <a href="./"><i class="icon-home icon-white"></i> Home</a>
             </li>
             <li class="">
-              <a href="./projects">Projects</a>
+              <a href="./projects"><i class="icon-th-large icon-white"></i> SDK Agents</a>
             </li>
             <li class="">
-              <a href="./doc">Documentation</a>
+              <a href="./doc"><i class="icon-book icon-white"></i> Documentation</a>
             </li>
           </ul>
         </div>
