--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -1,10 +1,15 @@
 
-<table>
+<form action="/restart_server" method="get">
+  <button class="btn btn-primary">Apply and reboot ruby agent sdk server</button>
+</form>
+
+
+
+<table class="table table-bordered">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Running ?</th>
-      <th>Actions</th>
+      <th>Agent name</th>
+      <th>Action</th>
     </tr>
   </thead>
 
@@ -12,7 +17,6 @@
     <% @agents.each do |agent_name, agent| %>
     <tr>
       <td><%= agent.name %></td>
-      <td><%= agent.running %></td>
       <td>
         <% if agent.running %>
         <form action='<%= "/agents/#{agent_name}/stop" %>' method="post">
@@ -26,18 +30,12 @@
       </td>
     </tr>
     <% end %>
+
     <tr>
       <form action="/create_agents" method="post">
-        <td><input type="text" name="agent[name]" /></td>
-        <td></td>
+        <td>Create new agent: <input type="text" name="agent[name]" /></td>
         <td><button class="btn btn-info">Create</button></td>
       </form>
     </tr>
-    <tr>
-      <form action="/restart_server" method="get">
-        <td><button class="btn btn-primary">Apply and reboot ruby agent sdk server</button></td>
-      </form>
-    </tr>
   </tbody>
-
 </table>
