Admin page: add logs tab.

--- a/web_shell/VM-Framework/views/layout.erb
+++ b/web_shell/VM-Framework/views/layout.erb
@@ -20,6 +20,9 @@
         <div class="nav-collapse collapse">
           <ul class="nav">
             <li class="">
+              <a href="#">SDK Server <%= get_sdk_version %></a>
+            </li>
+            <li class="">
               <a href="./"><i class="icon-home icon-white"></i> Home</a>
             </li>
             <li class="">
@@ -27,6 +30,12 @@
             </li>
             <li class="">
               <a href="./doc"><i class="icon-book icon-white"></i> Documentation</a>
+            </li>
+            <li class="">
+              <a href="./logSdk#endlog"><i class="icon-wrench icon-white"></i> SDK Server Log</a>
+            </li>
+            <li class="">
+              <a href="./logSdkAgents#endlog"><i class="icon-wrench icon-white"></i> SDK Agents Log</a>
             </li>
           </ul>
         </div>
