Adding redcarpet to manage documentation generation with style.
Some bug are still here.

--- a/web_shell/VM-Framework/views/doc.erb
+++ b/web_shell/VM-Framework/views/doc.erb
@@ -1,1 +1,14 @@
-toto
+<div class="row">
+ <div class="span3 bs-docs-sidebar">
+   <%= @toc_render %>
+ </div>
+ <div class="span9">
+   <%= @html_render %>
+ </div>
+</div>
+
+<script>
+$(document).ready(function() {
+ hljs.initHighlightingOnLoad();
+});
+</script>
