--- a/web_shell/VM-Framework/views/layout.erb
+++ b/web_shell/VM-Framework/views/layout.erb
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 
+
 <head>
   <title>Ruby agents sdk admin</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Bootstrap -->
   <link href="/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="/css/server_admin.css" rel="stylesheet" media="screen">
+
+  <!-- Highlight in documentation -->
+  <link href="/css/railcast.css" rel="stylesheet" media="screen">
+  <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
+
+  <script src="http://code.jquery.com/jquery.js"></script>
   <meta charset="utf-8" />
 
   <style>
@@ -13,7 +23,9 @@
   </style>
 </head>
 
-<body>
+
+
+<body data-spy="scroll" data-target=".bs-docs-sidebar">
   <div class="navbar navbar-inverse navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container">
@@ -49,5 +61,6 @@
 
 </body>
 
-<script src="http://code.jquery.com/jquery.js"></script>
+
+<script src="/js/highlight.js"></script>
 <script src="/js/bootstrap.min.js"></script>
