projetcs.erb: pull right the button + add a note.

--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -1,9 +1,11 @@
 
 <form action="/restart_server" method="get">
-  <button class="btn btn-primary">Apply and reboot ruby agent sdk server</button>
+  <button class="btn btn-primary pull-right">Apply and reboot ruby agent sdk server</button>
 </form>
+<br>
 
 
+note : remember to 'Apply and reboot ruby agent sdk server' after start or stop agents to be taken in concideration.
 
 <table class="table table-bordered">
   <thead>
