--- a/web_shell/VM-Framework/views/doc.erb
+++ b/web_shell/VM-Framework/views/doc.erb
@@ -1,5 +1,5 @@
 <div class="row">
- <div class="span3 bs-docs-sidebar">
+ <div class="span3 bs-docs-sidebar" id="navbar">
    <%= @toc_render %>
  </div>
  <div class="span9">
@@ -7,8 +7,18 @@
  </div>
 </div>
 
+<script>hljs.initHighlightingOnLoad();</script>
 <script>
 $(document).ready(function() {
- hljs.initHighlightingOnLoad();
+
+   // side bar
+   setTimeout(function () {
+     $('.bs-docs-sidenav').affix({
+       offset: {
+         top: 0
+       , bottom: 270
+       }
+     })
+   }, 100)
 });
 </script>
