--- a/web_shell/VM-Framework/views/logSdk.erb
+++ b/web_shell/VM-Framework/views/logSdk.erb
@@ -8,6 +8,9 @@
 
 <section id="endlog"></section>
 <br>
+
+<a class"btn" href="/reset_daemon_server_log">reset log file</a>
+
 <H2>
   This content is available into the file : ruby_workspace/sdk_logs/daemon_server.log
 </H2>
