--- a/web_shell/VM-Framework/views/logSdkAgents.erb
+++ b/web_shell/VM-Framework/views/logSdkAgents.erb
@@ -8,6 +8,9 @@
 
 <section id="endlog"></section>
 <br>
+
+<a class"btn" href="/reset_ruby_agent_sdk_server_log">reset log file</a>
+
 <H2>
   This content is available into the file : ruby_workspace/sdk_logs/ruby-agent-sdk-server.log
 </H2>
