projetcs.erb: update presentation.

--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -7,7 +7,7 @@
 
 note : remember to 'Apply and reboot ruby agent sdk server' after start or stop agents to be taken in concideration.
 
-<table class="table table-bordered">
+<table class="table table-bordered table-striped">
   <thead>
     <tr>
       <th>Agent name</th>
@@ -35,8 +35,8 @@ note : remember to 'Apply and reboot ruby agent sdk server' after start or stop 
 
     <tr>
       <form action="/create_agents" method="post">
-        <td>Create new agent: <input type="text" name="agent[name]" /></td>
-        <td><button class="btn btn-info">Create</button></td>
+        <td><input type="text" name="agent[name]" /></td>
+        <td><button class="btn btn-info">Create agent</button></td>
       </form>
     </tr>
   </tbody>
