Add patch note page.

--- a/web_shell/VM-Framework/views/layout.erb
+++ b/web_shell/VM-Framework/views/layout.erb
@@ -43,6 +43,9 @@
               <a href="./doc"><i class="icon-book icon-white"></i> Documentation</a>
             </li>
             <li class="">
+              <a href="./patch_note"><i class="icon-book icon-white"></i> Patch notes</a>
+            </li>
+            <li class="">
               <a href="./logSdk#endlog"><i class="icon-wrench icon-white"></i> SDK Server Log</a>
             </li>
             <li class="">
