Add more information about parsing debugging.

--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -44,7 +44,11 @@ Maybe there is valuable information for you on the patch note page.
 <br>
 
 
-note : remember to 'Apply and reboot ruby agent sdk server' after start or stop agents to be taken in concideration.
+<b>note :</b><br/>
+Remember to <b>'Apply and reboot ruby agent sdk server'</b> after start or stop agents to be taken in concideration.<br/><br/>
+
+If the ruby parsing went ok, you will have a <b>'ruby-agent-sdk-server ready !'</b> message into the SDK Agents Log (ruby-agent-sdk-server.log).<br/>
+If not, look for errors into the SDK Server Log (daemon_server.log).<br/>
 
 <table class="table table-bordered table-striped">
   <thead>
