Add link to log in explain of ruby parsing in project tab.

--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -47,9 +47,12 @@ Maybe there is valuable information for you on the patch note page.
 <b>note :</b><br/>
 Remember to <b>'Apply and reboot ruby agent sdk server'</b> after start or stop agents to be taken in concideration.<br/><br/>
 
-If the ruby parsing went ok, you will have a <b>'ruby-agent-sdk-server ready !'</b> message into the SDK Agents Log (ruby-agent-sdk-server.log).<br/>
-If not, look for errors into the SDK Server Log (daemon_server.log).<br/>
 
+
+If the ruby parsing went ok, you will have a <b>'ruby-agent-sdk-server ready !'</b> message into the  <a href="/logSdkAgents">SDK Agents Log tab</a>  (ruby-agent-sdk-server.log).<br/>
+If not, look for errors into the  <a href="/logSdk">SDK Server Log tab</a> (daemon_server.log).<br/>
+
+<br/>
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
