--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -36,13 +36,15 @@ Maybe there is valuable information for you on the patch note page.
     </div>
   </div>
 <% end %>
+<!-- End Modal -->
+
+
 
 
 <form action="/restart_server" method="get">
   <button class="btn btn-primary pull-right">Apply and reboot ruby agent sdk server</button>
 </form>
 <br>
-
 
 <b>note :</b><br/>
 Remember to <b>'Apply and reboot ruby agent sdk server'</b> after start or stop agents to be taken in concideration.<br/><br/>
