Alter reminder text at top on projet page.

--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -38,19 +38,12 @@ Maybe there is valuable information for you on the patch note page.
 <% end %>
 <!-- End Modal -->
 
-
-
-
-<form action="/restart_server" method="get">
-  <button class="btn btn-primary pull-right">Apply and reboot ruby agent sdk server</button>
-</form>
-<br>
-
-
 <div class="well row">
  <p>
-    <b>note :</b><br/>
-    Remember to <b>'Apply and reboot ruby agent sdk server'</b> after start or stop agents to be taken in concideration.<br/><br/>
+    <b>REMINDER :</b><br/>
+    Remember to click on bouton <b>'Apply and reboot ruby agent sdk server'</b> after start or stop agents to be taken in concideration.<br/><br/>
+
+    <b>How to check is reboot went ok :</b><br/>
     If the ruby parsing went ok, you will have a <b>'ruby-agent-sdk-server ready !'</b> message into the  <a href="/logSdkAgents">SDK Agents Log tab</a>  (ruby-agent-sdk-server.log).<br/>
     If not, look for errors into the  <a href="/logSdk">SDK Server Log tab</a> (daemon_server.log).<br/>
  </p>
@@ -82,6 +75,12 @@ Maybe there is valuable information for you on the patch note page.
   </table>
 
 <br/>
+<form action="/restart_server" method="get">
+  <button class="btn btn-primary pull-right">Apply and reboot ruby agent sdk server</button>
+</form>
+<br>
+
+
 <table class="table table-bordered table-striped">
   <thead>
     <tr>
