--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -43,7 +43,7 @@ Maybe there is valuable information for you on the patch note page.
     <b>REMINDER :</b><br/>
     Remember to click on bouton <b>'Apply and reboot ruby agent sdk server'</b> after start or stop agents to be taken in concideration.<br/><br/>
 
-    <b>How to check is reboot went ok :</b><br/>
+    <b>How to check if reboot went ok :</b><br/>
     If the ruby parsing went ok, you will have a <b>'ruby-agent-sdk-server ready !'</b> message into the  <a href="/logSdkAgents">SDK Agents Log tab</a>  (ruby-agent-sdk-server.log).<br/>
     If not, look for errors into the  <a href="/logSdk">SDK Server Log tab</a> (daemon_server.log).<br/>
  </p>
