--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -75,10 +75,17 @@ Maybe there is valuable information for you on the patch note page.
   </table>
 
 <br/>
-<form action="/restart_server" method="get">
-  <button class="btn btn-primary pull-right">Apply and reboot ruby agent sdk server</button>
+<form action="/restart_server" method="get" class="form-inline">
+ <div class="pull-right">
+   <label class="checkbox">
+     <input name="reset_logs" type="checkbox" <% if is_reset_log_checked == 'true' %> checked <% end %> > Reset logs on reboot
+   </label>
+   <button class="btn btn-primary">Apply and reboot ruby agent sdk server</button>
+ </div>
 </form>
 <br>
+
+
 
 
 <table class="table table-bordered table-striped">
