Add a nice signiature to most files.

--- a/web_shell/VM-Framework/views/layout.erb
+++ b/web_shell/VM-Framework/views/layout.erb
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 
+<!--
+  Xavier Demompion : xavier.demompion@mobile-devices.fr
+  Mobile Devices 2013
+-->
+
 
 <head>
   <title>Ruby agents sdk admin</title>
