--- a/web_shell/VM-Framework/views/projects.erb
+++ b/web_shell/VM-Framework/views/projects.erb
@@ -1,3 +1,7 @@
+<!--
+  Xavier Demompion : xavier.demompion@mobile-devices.fr
+  Mobile Devices 2013
+-->
 
 <!-- Modal -->
 <% if @action_popup == 1 %>
