--- a/web_shell/VM-Framework/views/logSdkAgents.erb
+++ b/web_shell/VM-Framework/views/logSdkAgents.erb
@@ -1,3 +1,8 @@
+<!--
+  Xavier Demompion : xavier.demompion@mobile-devices.fr
+  Mobile Devices 2013
+-->
+
 <div class="well row">
   <p>
     <small>
