--- a/web_shell/VM-Framework/views/patch_note.erb
+++ b/web_shell/VM-Framework/views/patch_note.erb
@@ -1,3 +1,8 @@
+<!--
+  Xavier Demompion : xavier.demompion@mobile-devices.fr
+  Mobile Devices 2013
+-->
+
 <div class="row">
  <div class="span3 bs-docs-sidebar" id="navbar">
    <%= @toc_render %>
