Center elements in table.

--- a/web_shell/VM-Framework/public/css/server_admin.css
+++ b/web_shell/VM-Framework/public/css/server_admin.css
@@ -160,6 +160,20 @@
 }
 
 
+
+
+/*
+  keep scroll bar al lthe time
+*/
 html {
     overflow-y: scroll;
+}
+
+
+.center-label{
+ text-align:center!important;
+}
+
+th,td {
+ text-align:center!important;
 }
