--- a/web_shell/VM-Framework/views/logSdk.erb
+++ b/web_shell/VM-Framework/views/logSdk.erb
@@ -17,7 +17,7 @@
 <a class="btn btn-primary pull-right" href="/reset_daemon_server_log">erase log file</a>
 
 <H2>
-  This content is available into the file : ruby_workspace/sdk_logs/daemon_server.log
+  This content is available in the file : ruby_workspace/sdk_logs/daemon_server.log
 </H2>
 
 <br><br><br><br>
